--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=giri
+spring.datasource.password=15082000
 
+spring.jpa.hibernate.ddl-auto=update
