--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=giri
 spring.datasource.password=15082000
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
